# fan_controller

./: Cargo.toml  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
cross/: Cargo.toml
cross/app/: Cargo.toml  build.rs
cross/app/src/: fan_control.rs  future.rs  main.rs  pin.rs
cross/app/src/driver/: dht.rs  fan.rs  mcp9808.rs  mod.rs
cross/board/: Cargo.toml
cross/board/src/: lib.rs
cross/driver/: Cargo.toml
cross/driver/src/: fan.rs  lib.rs  mcp9808.rs
cross/self_tests/: Cargo.toml  build.rs  memory.x
cross/self_tests/tests/: rp2040.rs
host/: Cargo.toml
host/src/: dht.rs  fan.rs  fan_curve.rs  future.rs  lib.rs
host/src/decode/: dht.rs  fan.rs  mcp9808.rs  mod.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
