[package]
name = "fan_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
uom = { version = "0.35", default-features = false, features = [
    "autoconvert",
    "u32",
    "f32",
    "si",
] }
either = { version = "1.9.0", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
pin-project = "1.1"

# Embassy-related dependencies
embedded-hal = "=1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"
futures = { version = "0.3", default-features = false }
defmt = "0.3"
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }

[dev-dependencies]
anyhow = "1.0"
