[package]
name = "fan_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
uom = { version = "0.35", default-features = false, features = [
    "autoconvert",
    "u32",
    "f64",
    "si",
] }
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
defmt = "0.3"
heapless = "0.7"
enterpolation = { version = "0.2", default-features = false, features = [
    "libm",
    "bspline",
] }
derive_more = "0.99"
num-traits = { version = "0.2", default-features = false }
fixed = "2.0.0-alpha.12"


[dev-dependencies]
anyhow = "1.0"
float_eq = "1.0"
