[package]
edition = "2021"
name = "app"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
fan_controller = { path = "../../host" }

uom = { version = "0.35", default-features = false, features = [
    "autoconvert",
    "f64",
    "si",
] }
pin-project = "1.1"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
futures = { version = "0.3", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
enterpolation = { version = "0.2", default-features = false, features = [
    "libm",
    "bspline",
] }

embedded-alloc = "0.5"
derive_builder = { version = "0.12", default-features = false }

# Embassy-related dependencies.
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }

embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }

embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }

embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }

embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.7.15"
embedded-hal = "=1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"] }
log = "0.4"
pio = "0.2.1"

[build-dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.4"
sha2 = "0.10"
data-encoding = "2.4"

[[bin]]
name = "app"
bench = false
doctest = false
test = false
