[package]
edition = "2021"
name = "app"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["defmt-trace", "wifi"]
wifi = ["dep:cyw43", "dep:cyw43-pio", "dep:pio-proc", "dep:futures"]

# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
board = { path = "../board", features = ["wifi"] }
driver = { path = "../driver" }
fan_controller = { path = "../../host" }

uom = { version = "0.35", default-features = false, features = [
    "autoconvert",
    "f64",
    "si",
] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
enterpolation = { version = "0.2", default-features = false, features = [
    "libm",
    "bspline",
] }

embedded-alloc = "0.5"
derive_builder = { version = "0.12", default-features = false }

# https://github.com/embassy-rs/embassy.git
# Embassy-related dependencies.
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
# embassy-net = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
#     "defmt",
#     "nightly",
#     "tcp",
#     "udp",
#     "dhcpv4",
#     "medium-ethernet",
# ] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { optional = true, git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { optional = true, git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "overclock",
] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { optional = true, version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
heapless = "0.7.15"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"] }
pio-proc = { optional = true, version = "0.2" }
pio = "0.2.1"

[build-dependencies]
anyhow = "1.0"

[[bin]]
name = "app"
bench = false
doctest = false
test = false
