[package]
edition = "2021"
name = "board"
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[dependencies]
driver = { path = "../driver" }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
defmt = "0.3"

[features]
default = ['defmt-trace']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
