[package]
edition = "2021"
name = "board"
version = "0.1.0"

[features]
default = ["wifi", "defmt-trace"]
wifi = ["dep:cyw43", "dep:cyw43-pio"]

# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[lib]
bench = false
doctest = false
test = false

[dependencies]
driver = { path = "../driver" }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
defmt = "0.3"

# Embassy-related dependencies
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

cyw43 = { optional = true, git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { optional = true, git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "overclock",
] }
