[package]
edition = "2021"
name = "driver"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
fan_controller = { path = "../../host" }
uom = { version = "0.35", default-features = false, features = [
    "autoconvert",
    "f64",
    "si",
] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["atomic"] }
enterpolation = { version = "0.2", default-features = false, features = [
    "libm",
    "bspline",
] }
derive_builder = { version = "0.12", default-features = false }
derive_more = "0.99"

# Embassy related dependencies.
embedded-hal-async = "1.0.0-rc.1"
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
defmt = "0.3"

[lib]
bench = false
doctest = false
test = false
