[package]
edition = "2021"
name = "self_tests"
publish = false
version = "0.1.0"

[[test]]
name = "rp2040"
harness = false

[dependencies]
board = { path = "../board" }
driver = { path = "../driver" }
embedded-alloc = "0.5"
anyhow = { version = "1.0", default-features = false }

# Embassy-related dependencies.
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[build-dependencies]
anyhow = "1.0"

[features]
default = ['defmt-trace']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
